--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,10 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  font_awesome_flutter: ^8.11.0
+  flutter_swiper: ^1.1.6
+  rflutter_alert: ^1.1.0
+
 
 dev_dependencies:
   flutter_test:
@@ -43,6 +47,13 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
+  fonts:
+    - family: App_Bar_Title
+      fonts:
+        - asset: fonts/ConcertOne-Regular.ttf
+    - family: Calculate
+      fonts:
+        - asset: fonts/Audiowide-Regular.ttf
 
   # To add assets to your application, add an assets section, like this:
   # assets:
